// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert action of Alert custom action 1`] = `
<div
  class="ant-alert ant-alert-success"
  data-show="true"
  role="alert"
>
  <span
    aria-label="success-filled"
    class="anticon anticon-success-filled ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="success-filled"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 1a7 7 0 110 14A7 7 0 018 1zm3.15 4.93L7.1 9.98 4.85 7.73a.5.5 0 10-.7.71l2.6 2.6c.19.2.5.2.7 0l4.4-4.4a.5.5 0 00-.7-.71z"
      />
    </svg>
  </span>
  <div
    class="ant-alert-content"
  >
    <div
      class="ant-alert-message"
    >
      Success Tips
    </div>
  </div>
  <div
    class="ant-alert-action"
  >
    <button
      class="ant-btn ant-btn-text ant-btn-sm"
      type="button"
    >
      <span>
        UNDO
      </span>
    </button>
  </div>
  <button
    class="ant-alert-close-icon"
    tabindex="0"
    type="button"
  >
    <span
      aria-label="close"
      class="anticon anticon-close"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M13.65 2.15a.5.5 0 11.7.7L9.21 8l5.46 5.46a.5.5 0 11-.71.7L8.5 8.72l-5.46 5.46a.5.5 0 01-.7-.71L7.78 8 2.65 2.85a.5.5 0 11.7-.7L8.5 7.29l5.15-5.14z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert could accept none react element icon 1`] = `
<div
  class="ant-alert ant-alert-success"
  data-show="true"
  role="alert"
>
  <span
    class="ant-alert-icon"
  >
    icon
  </span>
  <div
    class="ant-alert-content"
  >
    <div
      class="ant-alert-message"
    >
      Success Tips
    </div>
  </div>
</div>
`;

exports[`Alert rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-alert ant-alert-info ant-alert-no-icon ant-alert-rtl"
  data-show="true"
  role="alert"
>
  <div
    class="ant-alert-content"
  />
</div>
`;

exports[`Alert support closeIcon 1`] = `
<div
  class="ant-alert ant-alert-warning ant-alert-no-icon"
  data-show="true"
  role="alert"
>
  <div
    class="ant-alert-content"
  >
    <div
      class="ant-alert-message"
    >
      Warning Text Warning Text Warning TextW arning Text Warning Text Warning TextWarning Text
    </div>
  </div>
  <button
    class="ant-alert-close-icon"
    tabindex="0"
    type="button"
  >
    <span>
      close
    </span>
  </button>
</div>
`;
